kubernetes/workloads/app/forkbomb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy12
  labels:
    app: deploy12
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy12
  template:
    metadata:
      labels:
        app: deploy12
    spec:
      containers:
      - name: container-0
        image: hunh0w/forkbomb:version1
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 14150000
          periodSeconds: 14150000
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 14150000
          periodSeconds: 14150000
