kubernetes/workloads/app/words.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: words
spec:
  replicas: 1
  selector:
    matchLabels:
      app: words
  template:
    metadata:
      labels:
        app: words
    spec:
      containers:
      - name: words
        image: ghcr.io/biothewolff/kube-grenade/words:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.2"
          limits:
            memory: "128Mi"
            cpu: "0.2"
        securityContext:
          privileged: false
        ports:
          - name: http
            containerPort: 8081
