kubernetes/workloads/app/aggregator.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: aggregator
  labels:
    app: aggregator
    service: aggregator
spec:
  type: NodePort
  selector:
    app: aggregator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      nodePort: 30000
