kubernetes/workloads/app/words.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: words
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: words
